--- a/Views/liquidaciones/Create.cshtml
+++ b/Views/liquidaciones/Create.cshtml
@@ -38,7 +38,7 @@
 
             <div class="d-flex justify-content-end">
                 <input type="submit" value="Guardar" class="btn btn-primary" />
-                @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-secondary ms-2" })
+                @Html.ActionLink("Cancelar", "Gestion", null, new { @class = "btn btn-secondary ms-2" })
             </div>
         </div>
     }
