--- a/Content/Site.css
+++ b/Content/Site.css
@@ -18,3 +18,12 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.footer {
+    bottom: 0;
+    width: 100%;
+    height: 50px;
+    background-color: #f8f9fa;
+    text-align: center;
+    line-height: 50px;
+}
