--- a/Views/horas_extras/Create.cshtml
+++ b/Views/horas_extras/Create.cshtml
@@ -2,12 +2,13 @@
 
 @{
     ViewBag.Title = "Registrar Horas Extra";
+    ViewBag.HorasList = new SelectList(Enumerable.Range(1, 5).Select(h => new { Value = h, Text = $"{h} hora(s)" }), "Value", "Text");
 }
 
 <div class="container mt-5">
     <h2 class="text-center mb-4">Registrar Horas Extra</h2>
 
-    @using (Html.BeginForm("Create", "horasExtras", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    @using (Html.BeginForm("Create", "horas_Extras", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
 
@@ -19,13 +20,13 @@
             <div class="row">
                 <div class="col-md-6 mb-3">
                     @Html.LabelFor(model => model.Fecha_HoraExtra, "Fecha", htmlAttributes: new { @class = "form-label" })
-                    @Html.EditorFor(model => model.Fecha_HoraExtra, new { htmlAttributes = new { @class = "form-control", type = "date" } })
+                    @Html.EditorFor(model => model.Fecha_HoraExtra, new { htmlAttributes = new { @class = "form-control", type = "date", id = "fechaInicio", min = DateTime.Today.ToString("yyyy-MM-dd") } })
                     @Html.ValidationMessageFor(model => model.Fecha_HoraExtra, "", new { @class = "text-danger" })
                 </div>
 
                 <div class="col-md-6 mb-3">
-                    @Html.LabelFor(model => model.Cantidad_Horas, "Cantidad de Horas", htmlAttributes: new { @class = "form-label" })
-                    @Html.EditorFor(model => model.Cantidad_Horas, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.Label("Cantidad de Horas", htmlAttributes: new { @class = "form-label" })
+                    @Html.DropDownList("Cantidad_Horas", ViewBag.HorasList as SelectList, "Seleccione horas", new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Cantidad_Horas, "", new { @class = "text-danger" })
                 </div>
 
@@ -38,7 +39,7 @@
 
             <div class="d-flex justify-content-end">
                 <input type="submit" value="Guardar" class="btn btn-primary" />
-                @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-secondary ms-2" })
+                @Html.ActionLink("Cancelar", "Gestion", null, new { @class = "btn btn-secondary ms-2" })
             </div>
         </div>
     }
