--- a/Views/horas_extras/Index.cshtml
+++ b/Views/horas_extras/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DataBase_RH_BanderaBlanca.Models.horas_extras>
+﻿@model IEnumerable<DataBase_RH_BanderaBlanca.Models.Hora_Extra>
 
 @{
     ViewBag.Title = "Gestión de Horas Extras";
@@ -26,13 +26,14 @@
                     <table class="table my-0 table-hover">
                         <thead class="thead-light">
                             <tr>
-                                <th>@Html.DisplayNameFor(model => model.Cantidad_Horas)</th>
-                                <th>@Html.DisplayNameFor(model => model.Detalle_Hora_Extra)</th>
-                                <th>@Html.DisplayNameFor(model => model.Monto_HoraExtra)</th>
-                                <th>@Html.DisplayNameFor(model => model.Observacion)</th>
-                                <th>@Html.DisplayNameFor(model => model.Aprobada)</th>
-                                <th>@Html.DisplayNameFor(model => model.HizoHoras)</th>
-                                <th>@Html.DisplayNameFor(model => model.catalogo_horas_extras.Tipo_Hora_Extra)</th>
+                                <th>Colaborador</th>
+                                <th>Cantidad de Horas</th>
+                                <th>Detalle de Hora Extra</th>
+                                <th>Monto de Hora Extra</th>
+                                <th>Observaciones</th>
+                                <th>Aprobado</th>
+                                <th>Realizo las horas</th>
+                                <th>Tipo de Hora Extra</th>
                                 <th class="text-right">Acciones</th>
                             </tr>
                         </thead>
@@ -40,20 +41,27 @@
                             @foreach (var item in Model)
                             {
                                 <tr>
-                                    <td>@Html.DisplayFor(modelItem => item.Cantidad_Horas)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Detalle_Hora_Extra)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Monto_HoraExtra)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Observacion)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Aprobada)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.HizoHoras)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.catalogo_horas_extras.Tipo_Hora_Extra)</td>
-                                    @if (!item.Aprobada && user.ObtenerIdsDeAccesos(user.listaAccesos).Contains(4)) // Solo muestra los botones si el idEstado es 3
+                                    <td>@Html.DisplayFor(modelItem => item.personas.Nombre) @Html.DisplayFor(modelItem => item.personas.Primer_Apellido) @Html.DisplayFor(modelItem => item.personas.Segundo_Apellido)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.horas_extras.Cantidad_Horas)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.horas_extras.Detalle_Hora_Extra)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.horas_extras.Monto_HoraExtra)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.horas_extras.Observacion)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.horas_extras.Aprobada)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.horas_extras.HizoHoras)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.horas_extras.catalogo_horas_extras.Tipo_Hora_Extra)</td>
+                                    @if (!item.horas_extras.Aprobada && user.ObtenerIdsDeAccesos(user.listaAccesos).Contains(4)) // Solo muestra los botones si el idEstado es 3
                                     {
                                         <td class="text-right">
-                                            @Html.ActionLink("Editar", "Edit", new { idDate = item.Fecha_HoraExtra, idTipoHora = item.idCatalogo_Horas_Extras, idEmpleado = item.idEmpleado }, new { @class = "btn btn-primary btn-sm" })
+                                            @Html.ActionLink("Editar", "Edit", new { idDate = item.horas_extras.Fecha_HoraExtra, idTipoHora = item.horas_extras.idCatalogo_Horas_Extras, idEmpleado = item.horas_extras.idEmpleado }, new { @class = "btn btn-primary btn-sm" })
                                         </td>
                                     }
-                                    
+                                    else
+                                    {
+                                        <td class="text-right">
+                                            Opción no disponible.
+                                        </td>
+                                    }
+
                                 </tr>
                             }
                         </tbody>
