--- a/Views/liquidaciones/Index.cshtml
+++ b/Views/liquidaciones/Index.cshtml
@@ -6,110 +6,99 @@
     user = (DataBase_RH_BanderaBlanca.Models.Persona)Session["user"];
 }
 
-<h2>Index</h2>
+<div class="row">
+    <div class="col-12 col-lg-12 col-xxl-12 d-flex">
+        <div class="card flex-fill">
+            <div class="card-header">
+                <h5 class="card-title mb-0">Gestión de Liquidaciones</h5>
+            </div>
 
-@Html.AntiForgeryToken()
-@if (user.ObtenerIdsDeAccesos(user.listaAccesos).Contains(8)) // Solo muestra los botones si el idEstado es 3
-{
-    <p>
-        @Html.ActionLink("Create New", "Create")
-    </p>
-}
+            <div class="container mt-5 pb-5">
+                <div class="d-flex justify-content-between align-items-center mb-4">
+                    <h2 class="mb-0">Liquidaciones</h2>
+                    <div class="ml-auto d-flex">
+                        @if (user.ObtenerIdsDeAccesos(user.listaAccesos).Contains(8))
+                        {
+                            <p>
+                                @Html.ActionLink("Crear Nueva Liquidación", "Create", null, new { @class = "btn btn-primary m-2" })
+                            </p>
+                        }
+                    </div>
+                </div>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Preaviso)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DiasPreaviso)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.catalogo_tipo_liquidaciones.Tipo_Liquidaciones)
-        </th>
-        <th>
-            Monto Total de Preaviso
-        </th>
-        <th>
-            Monto Total de Cesantia
-        </th>
-        <th>
-            Monto Total de Vacaciones
-        </th>
-        <th>
-            Monto Total de Aguinaldo
-        </th>
-        <th>
-            Monto Total de Liquidacion
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fecha_Salida)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.estados_solicitudes.Estados_Solicitud)
-        </th>
-        <th>
-            Acciones
-        </th>
-    </tr>
+                <div class="table-responsive">
+                    <table class="table my-0 table-hover">
+                        <thead class="thead-light">
+                            <tr>
+                                <th>@Html.DisplayNameFor(model => model.Preaviso)</th>
+                                <th>@Html.DisplayNameFor(model => model.DiasPreaviso)</th>
+                                <th>@Html.DisplayNameFor(model => model.catalogo_tipo_liquidaciones.Tipo_Liquidaciones)</th>
+                                <th>Monto Total de Preaviso</th>
+                                <th>Monto Total de Cesantía</th>
+                                <th>Monto Total de Vacaciones</th>
+                                <th>Monto Total de Aguinaldo</th>
+                                <th>Monto Total de Liquidación</th>
+                                <th>@Html.DisplayNameFor(model => model.Fecha_Salida)</th>
+                                <th>@Html.DisplayNameFor(model => model.estados_solicitudes.Estados_Solicitud)</th>
+                                <th>Acciones</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>@Html.DisplayFor(modelItem => item.Preaviso)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.DiasPreaviso)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.catalogo_tipo_liquidaciones.Tipo_Liquidaciones)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.detalle_maestro_liquidaciones.Monto_Total_Preaviso)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.detalle_maestro_liquidaciones.Monto_Total_Cesantia)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.detalle_maestro_liquidaciones.Monto_Total_Vacaciones)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.detalle_maestro_liquidaciones.Monto_Total_Aguinaldo)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.detalle_maestro_liquidaciones.Monto_Total_Liquidacion)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.Fecha_Salida)</td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.estados_solicitudes.Estados_Solicitud)
+                                        @if (item.estados_solicitudes.idEstados_Solicitudes == 1)
+                                        {
+                                            <span class="text-success ms-2">
+                                                <i class="bi bi-check"></i>
+                                            </span>
+                                        }
+                                        @if (item.estados_solicitudes.idEstados_Solicitudes == 2)
+                                        {
+                                            <span class="text-danger ms-2">
+                                                <i class="bi bi-exclamation-triangle"></i>
+                                            </span>
+                                        }
+                                    </td>
+                                    <td>
+                                        @if (item.estados_solicitudes.idEstados_Solicitudes == 3 && user.ObtenerIdsDeAccesos(user.listaAccesos).Contains(6))
+                                        {
+                                            using (Html.BeginForm("UpdateEstado", "Liquidaciones", FormMethod.Post))
+                                            {
+                                                @Html.Hidden("id", item.Fecha_Liquidacion)
+                                                @Html.Hidden("estado", 1)
+                                                <button type="submit" class="btn btn-success m-2">Aprobar</button>
+                                            }
+                                            using (Html.BeginForm("UpdateEstado", "Liquidaciones", FormMethod.Post))
+                                            {
+                                                @Html.Hidden("id", item.Fecha_Liquidacion)
+                                                @Html.Hidden("estado", 2)
+                                                <button type="submit" class="btn btn-danger m-2">Rechazar</button>
+                                            }
+                                        }
+                                        else
+                                        {
+                                            <span class="text-muted">Acción no disponible</span>
+                                        }
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Preaviso)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DiasPreaviso)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.catalogo_tipo_liquidaciones.Tipo_Liquidaciones)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.detalle_maestro_liquidaciones.Monto_Total_Preaviso)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.detalle_maestro_liquidaciones.Monto_Total_Cesantia)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.detalle_maestro_liquidaciones.Monto_Total_Vacaciones)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.detalle_maestro_liquidaciones.Monto_Total_Aguinaldo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.detalle_maestro_liquidaciones.Monto_Total_Liquidacion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Fecha_Salida)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.estados_solicitudes.Estados_Solicitud)
-            </td>
-            <td>
-                @if (item.estados_solicitudes.idEstados_Solicitudes == 3 && user.ObtenerIdsDeAccesos(user.listaAccesos).Contains(6)) // Solo muestra los botones si el idEstado es 3
-                {
-                    <!-- Botón para aprobar -->
-                    using (Html.BeginForm("UpdateEstado", "Liquidaciones", FormMethod.Post))
-                    {
-                        @Html.Hidden("id", item.Fecha_Liquidacion) <!-- Id del registro de la liquidación -->
-                        @Html.Hidden("estado", 1) <!-- Estado 1 para aprobado -->
-                        <button type="submit" class="btn btn-success">Aprobar</button>
-                    }
-
-                    <!-- Botón para rechazar -->
-                    using (Html.BeginForm("UpdateEstado", "Liquidaciones", FormMethod.Post))
-                    {
-                        @Html.Hidden("id", item.Fecha_Liquidacion)
-                        @Html.Hidden("estado", 2) <!-- Estado 2 para rechazado -->
-                        <button type="submit" class="btn btn-danger">Rechazar</button>
-                    }
-                }
-                else
-                {
-                    <span class="text-muted">Acción no disponible</span>
-                }
-            </td>
-        </tr>
-    }
-</table>
+        </div>
+    </div>
+</div>
