--- a/Views/permisos_solicitados/Edit.cshtml
+++ b/Views/permisos_solicitados/Edit.cshtml
@@ -1,63 +1,59 @@
 ﻿@model DataBase_RH_BanderaBlanca.Models.permisos_solicitados
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar Permiso";
 }
 
-<h2>Edit</h2>
+<div class="container mt-5">
+    <h2 class="text-center mb-4">Editar Permiso</h2>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+    @using (Html.BeginForm("Edit", "permisos_solicitados", FormMethod.Post))
+    {
+        @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    <h4>permisos_solicitados</h4>
+<div class="mb-4">
+    <h4 class="text-muted">Detalles del Permiso</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    @Html.HiddenFor(model => model.Fecha_Permiso)
-
-    @Html.HiddenFor(model => model.idEmpleado)
-
-    @Html.HiddenFor(model => model.Detalle_Permiso)
-
-    @Html.HiddenFor(model => model.Fecha_Solicitud)
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.idEstados_Solicitudes, "idEstados_Solicitudes", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("idEstados_Solicitudes", null, htmlAttributes: new { @class = "form-control" })
+    <div class="row">
+        <!-- Estado de Solicitud -->
+        <div class="col-md-6 mb-3">
+            @Html.LabelFor(model => model.idEstados_Solicitudes, "Estado de Solicitud", htmlAttributes: new { @class = "form-label" })
+            @Html.DropDownList("idEstados_Solicitudes", null, htmlAttributes: new { @class = "form-select" })
             @Html.ValidationMessageFor(model => model.idEstados_Solicitudes, "", new { @class = "text-danger" })
         </div>
-    </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.ConGoce, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            <div class="checkbox">
-                @Html.EditorFor(model => model.ConGoce)
+        <!-- Observación -->
+        <div class="col-md-6 mb-3">
+            @Html.LabelFor(model => model.Observacion, "Observación", htmlAttributes: new { @class = "form-label" })
+            @Html.EditorFor(model => model.Observacion, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Observacion, "", new { @class = "text-danger" })
+        </div>
+
+        <!-- Con Goce -->
+        <div class="col-md-6 mb-3">
+            @Html.LabelFor(model => model.ConGoce, "Con Goce", htmlAttributes: new { @class = "form-label" })
+            <div class="form-check">
+                @Html.CheckBoxFor(model => model.ConGoce, new { @class = "form-check-input" })
                 @Html.ValidationMessageFor(model => model.ConGoce, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.Observacion, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Observacion, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Observacion, "", new { @class = "text-danger" })
-        </div>
-    </div>
+    <!-- Campos Ocultos -->
+    @Html.HiddenFor(model => model.Fecha_Permiso)
+    @Html.HiddenFor(model => model.idEmpleado)
+    @Html.HiddenFor(model => model.Detalle_Permiso)
+    @Html.HiddenFor(model => model.Fecha_Solicitud)
+    @Html.HiddenFor(model => model.Cantidad_Horas)
 
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
-        </div>
+
+    <div class="d-flex justify-content-end">
+        <input type="submit" value="Guardar" class="btn btn-primary" />
+        @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-secondary ms-2" })
     </div>
 </div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
+    }
 </div>
