--- a/Views/permisos_solicitados/Index.cshtml
+++ b/Views/permisos_solicitados/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DataBase_RH_BanderaBlanca.Models.permisos_solicitados>
+﻿@model IEnumerable<DataBase_RH_BanderaBlanca.Models.Permiso>
 
 @{
     ViewBag.Title = "Gestión de Permisos Solicitados";
@@ -26,10 +26,12 @@
                     <table class="table my-0 table-hover">
                         <thead class="thead-light">
                             <tr>
-                                <th>@Html.DisplayNameFor(model => model.Detalle_Permiso)</th>
-                                <th>@Html.DisplayNameFor(model => model.Fecha_Solicitud)</th>
-                                <th>@Html.DisplayNameFor(model => model.Observacion)</th>
-                                <th>@Html.DisplayNameFor(model => model.estados_solicitudes.Estados_Solicitud)</th>
+                                <th>Colaborador</th>
+                                <th>Detalle del Permiso</th>
+                                <th>Fecha de Solicitud</th>
+                                <th>Cantidad de Horas</th>
+                                <th>Observaciones</th>
+                                <th>Estado</th>
                                 <th class="text-right">Acciones</th>
                             </tr>
                         </thead>
@@ -37,14 +39,22 @@
                             @foreach (var item in Model)
                             {
                                 <tr>
-                                    <td>@Html.DisplayFor(modelItem => item.Detalle_Permiso)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Fecha_Solicitud)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Observacion)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.estados_solicitudes.Estados_Solicitud)</td>
-                                    @if ((item.estados_solicitudes.idEstados_Solicitudes != 1 && item.estados_solicitudes.idEstados_Solicitudes != 2) && user.ObtenerIdsDeAccesos(user.listaAccesos).Contains(4)) // Solo muestra los botones si el idEstado es 3
+                                    <td>@Html.DisplayFor(modelItem => item.personas.Nombre) @Html.DisplayFor(modelItem => item.personas.Primer_Apellido) @Html.DisplayFor(modelItem => item.personas.Segundo_Apellido)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.permisos_Solicitados.Detalle_Permiso)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.permisos_Solicitados.Fecha_Solicitud)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.permisos_Solicitados.Cantidad_Horas)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.permisos_Solicitados.Observacion)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.permisos_Solicitados.estados_solicitudes.Estados_Solicitud)</td>
+                                    @if ((item.permisos_Solicitados.estados_solicitudes.idEstados_Solicitudes != 1 && item.permisos_Solicitados.estados_solicitudes.idEstados_Solicitudes != 2) && user.ObtenerIdsDeAccesos(user.listaAccesos).Contains(4)) // Solo muestra los botones si el idEstado es 3
                                     {
                                         <td class="text-right">
-                                            @Html.ActionLink("Editar", "Edit", new { date = item.Fecha_Permiso, idEmpleado = item.idEmpleado }, new { @class = "btn btn-primary btn-sm" })
+                                            @Html.ActionLink("Editar", "Edit", new { date = item.permisos_Solicitados.Fecha_Permiso, idEmpleado = item.permisos_Solicitados.idEmpleado }, new { @class = "btn btn-primary btn-sm" })
+                                        </td>
+                                    }
+                                    else
+                                    {
+                                        <td class="text-right">
+                                            Opcion no disponible
                                         </td>
                                     }
                                 </tr>
