--- a/Views/planillas/Create.cshtml
+++ b/Views/planillas/Create.cshtml
@@ -54,7 +54,7 @@
 
             <div class="d-flex justify-content-end">
                 <input type="submit" value="Registrar" class="btn btn-primary" />
-                @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-secondary ms-2" })
+                @Html.ActionLink("Cancelar", "Gestion", null, new { @class = "btn btn-secondary ms-2" })
             </div>
         </div>
     }
