--- a/Views/vacaciones/Edit.cshtml
+++ b/Views/vacaciones/Edit.cshtml
@@ -1,54 +1,45 @@
 ﻿@model DataBase_RH_BanderaBlanca.Models.vacaciones
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Editar Vacaciones";
 }
 
-<h2>Edit</h2>
+<div class="container mt-5">
+    <h2 class="text-center mb-4">Editar Vacaciones</h2>
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-    <h4>vacaciones</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @using (Html.BeginForm("Edit", "vacaciones", FormMethod.Post))
+    {
+        @Html.AntiForgeryToken()
 
-    @Html.HiddenFor(model => model.Fecha_Inicio)
+        <div class="mb-4">
+            <h4 class="text-muted">Detalles de la Solicitud</h4>
+            <hr />
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    @Html.HiddenFor(model => model.Fecha_Final)
+            @Html.HiddenFor(model => model.Fecha_Inicio)
+            @Html.HiddenFor(model => model.Fecha_Final)
+            @Html.HiddenFor(model => model.idEmpleado)
+            @Html.HiddenFor(model => model.Cantidad_Dias)
+            @Html.HiddenFor(model => model.Fecha_Solicitud)
 
-    @Html.HiddenFor(model => model.idEmpleado)
+            <div class="row">
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.idEstados_Solicitudes, "Estado de la Solicitud", htmlAttributes: new { @class = "form-label" })
+                    @Html.DropDownList("idEstados_Solicitudes", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.idEstados_Solicitudes, "", new { @class = "text-danger" })
+                </div>
 
-    @Html.HiddenFor(model => model.Cantidad_Dias)
+                <div class="col-md-6 mb-3">
+                    @Html.LabelFor(model => model.Observacion, "Observaciones", htmlAttributes: new { @class = "form-label" })
+                    @Html.EditorFor(model => model.Observacion, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Observacion, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
-    @Html.HiddenFor(model => model.Fecha_Solicitud)
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.idEstados_Solicitudes, "idEstados_Solicitudes", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("idEstados_Solicitudes", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.idEstados_Solicitudes, "", new { @class = "text-danger" })
+            <div class="d-flex justify-content-end">
+                <input type="submit" value="Guardar Cambios" class="btn btn-primary" />
+                @Html.ActionLink("Cancelar", "Index", null, new { @class = "btn btn-secondary ms-2" })
+            </div>
         </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Observacion, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Observacion, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Observacion, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
-        </div>
-    </div>
-</div>
-}
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
+    }
 </div>
