--- a/Views/vacaciones/Index.cshtml
+++ b/Views/vacaciones/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DataBase_RH_BanderaBlanca.Models.vacaciones>
+﻿@model IEnumerable<DataBase_RH_BanderaBlanca.Models.Vacacion>
 
 @{
     ViewBag.Title = "Index";
@@ -24,32 +24,36 @@
                         <thead class="thead-light">
                             <tr>
                                 <th>Empleado</th>
-                                <th>@Html.DisplayNameFor(model => model.Cantidad_Dias)</th>
-                                <th>@Html.DisplayNameFor(model => model.Fecha_Solicitud)</th>
-                                <th>@Html.DisplayNameFor(model => model.Observacion)</th>
-                                <th>@Html.DisplayNameFor(model => model.estados_solicitudes.Estados_Solicitud)</th>
-                                <th></th>
+                                <th>Fecha de inicio</th>
+                                <th>Fecha de finalizacion</th>
+                                <th>Cantidad de dias</th>
+                                <th>Fecha de Solicitud</th>
+                                <th>Observacion</th>
+                                <th>Estado de la solicitud</th>
+                                <th>Acciones</th>
                             </tr>
                         </thead>
                         <tbody>
                             @foreach (var item in Model)
                             {
                                 <tr>
-                                    <td>@Html.DisplayFor(modelItem => item.idEmpleado)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Cantidad_Dias)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Fecha_Solicitud)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.Observacion)</td>
-                                    <td>@Html.DisplayFor(modelItem => item.estados_solicitudes.Estados_Solicitud)</td>
-                                    @if ((item.estados_solicitudes.idEstados_Solicitudes == 3) && user.ObtenerIdsDeAccesos(user.listaAccesos).Contains(4)) // Solo muestra los botones si el idEstado es 3
+                                    <td>@Html.DisplayFor(modelItem => item.personas.Nombre) @Html.DisplayFor(modelItem => item.personas.Primer_Apellido) @Html.DisplayFor(modelItem => item.personas.Segundo_Apellido)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.vacaciones.Fecha_Inicio)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.vacaciones.Fecha_Final)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.vacaciones.Cantidad_Dias)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.vacaciones.Fecha_Solicitud)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.vacaciones.Observacion)</td>
+                                    <td>@Html.DisplayFor(modelItem => item.vacaciones.estados_solicitudes.Estados_Solicitud)</td>
+                                    @if ((item.vacaciones.estados_solicitudes.idEstados_Solicitudes == 3) && user.ObtenerIdsDeAccesos(user.listaAccesos).Contains(4)) // Solo muestra los botones si el idEstado es 3
                                     {
                                         <td class="text-right">
-                                            @Html.ActionLink("Editar", "Edit", new { date = item.Fecha_Inicio, idEmpleado = item.idEmpleado }, new { @class = "btn btn-primary btn-sm" })
+                                            @Html.ActionLink("Responder Solicitud", "Edit", new { date = item.vacaciones.Fecha_Inicio, idEmpleado = item.vacaciones.idEmpleado }, new { @class = "btn btn-primary btn-sm" })
                                         </td>
                                     }
                                     else
                                     {
                                         <td class="text-right">
-                                           Accion no disponible
+                                            Accion no disponible
                                         </td>
                                     }
 
